--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@angular/service-worker": "~8.2.14",
     "firebase": ">= 5.5.7 <8",
     "hammerjs": "^2.0.8",
+    "leaflet": "^1.5.1",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
